# game_life_cpp

./: .gitignore  CMakeLists.txt  README.md
include/: Game.h
src/: Cell.cpp  Field.cpp  Game.cpp  main.cpp  sett.cpp  utils.cpp
